--- a/WpfApp.PL/MainWindow.xaml
+++ b/WpfApp.PL/MainWindow.xaml
@@ -8,9 +8,7 @@
         xmlns:vms="clr-namespace:WpfApp.PL.ViewModel"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d" 
-        Height="600" Width="1080" 
-        Foreground="White" 
-        ResizeMode="NoResize"
+        Foreground="White"
         WindowStartupLocation="CenterScreen" 
         WindowStyle="None"
         DataContext="{Binding Source={StaticResource ViewModelLocator}, Path=Main}">
@@ -28,14 +26,6 @@
             </DoubleAnimationUsingKeyFrames>
         </Storyboard>
     </Window.Resources>
-    <Window.Triggers>
-        <EventTrigger RoutedEvent="ButtonBase.Click" SourceName="ButtonOpenMenu">
-            <BeginStoryboard Storyboard="{StaticResource OpenMenu}"/>
-        </EventTrigger>
-        <EventTrigger RoutedEvent="ButtonBase.Click" SourceName="ButtonCloseMenu">
-            <BeginStoryboard Storyboard="{StaticResource CloseMenu}"/>
-        </EventTrigger>
-    </Window.Triggers>
     <materialDesign:DialogHost x:Name="RootDialog" Identifier="RootDialog" IsOpen="{Binding IsUserLoggedIn, Mode=OneWay, Converter={StaticResource InverseBooleanValueConverter}}" Margin="0,6,0,-6"> 
        
         <materialDesign:DialogHost.DialogContent>
@@ -54,7 +44,7 @@
         
         <Grid Background="#FFDEDEDE">
             <Grid x:Name="GridMain" HorizontalAlignment="Right" VerticalAlignment="Bottom" Height="540" Width="1010"/>
-            <Grid Height="60" VerticalAlignment="Top" Background="#FF5C99D6">
+            <Grid Height="60" VerticalAlignment="Top" Background="{StaticResource AccentBrush}">
                 <Grid.Effect>
                     <DropShadowEffect BlurRadius="1" ShadowDepth="1" Color="#FFACACAC"/>
                 </Grid.Effect>
@@ -73,30 +63,23 @@
                 </StackPanel>
                 <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="22" Text="{Binding Title}"/>
             </Grid>
-            <Grid x:Name="GridMenu" Width="70" HorizontalAlignment="Left" Background="#FF31577E">
-                <Grid.Effect>
-                    <DropShadowEffect BlurRadius="2" ShadowDepth="1" Color="#FFAEAEAE"/>
-                </Grid.Effect>
+            <Grid x:Name="GridMenu" Width="70" HorizontalAlignment="Left" Background="{StaticResource PrimaryBrush}">
                 <StackPanel>
-                    <Grid Height="150" Background="White" RenderTransformOrigin="0.5,0.5">
-                        <Grid.RenderTransform>
-                            <TransformGroup>
-                                <ScaleTransform/>
-                                <SkewTransform/>
-                                <RotateTransform/>
-                                <TranslateTransform/>
-                            </TransformGroup>
-                        </Grid.RenderTransform>
-                        <Button x:Name="ButtonOpenMenu" Visibility="{Binding IsDrawerOpen}" Height="60" Width="60" Margin="5" HorizontalAlignment="Right" VerticalAlignment="Top" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FF31577E">
-                            <materialDesign:PackIcon Kind="Menu" Width="25" Height="25"/>
-                        </Button>
-                        <Button x:Name="ButtonCloseMenu" Visibility="Collapsed" Height="60" Width="60" Margin="5" HorizontalAlignment="Right" VerticalAlignment="Top" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FF31577E">
-                            <materialDesign:PackIcon Kind="ArrowLeft" Width="25" Height="25"/>
-                        </Button>
-
-                        <Image Height="80" VerticalAlignment="Bottom"/>
+                    <Grid Height="60" Background="{StaticResource AccentBrush}" >
+                        <ToggleButton Style="{StaticResource MaterialDesignHamburgerToggleButton}"
+                                      Height="25" Width="25"
+                                    HorizontalAlignment="Right" Margin="10 10 25 10" >
+                            <ToggleButton.Triggers>
+                                <EventTrigger RoutedEvent="ToggleButton.Checked">
+                                    <BeginStoryboard Storyboard="{StaticResource OpenMenu}"/>
+                                </EventTrigger>
+                                <EventTrigger RoutedEvent="ToggleButton.Unchecked">
+                                    <BeginStoryboard Storyboard="{StaticResource CloseMenu}"/>
+                                </EventTrigger>
+                            </ToggleButton.Triggers>
+                        </ToggleButton>
                     </Grid>
-                    <ListView x:Name="ListViewMenu" Foreground="#FF5C99D6" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+                    <ListView x:Name="ListViewMenu" Foreground="White" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
                         <ListViewItem x:Name="ItemHome" Height="60">
                             <StackPanel Orientation="Horizontal">
                                 <materialDesign:PackIcon Kind="ViewDashboard" Height="25" Width="25" Margin="10"/>
