--- a/WpfApp.PL/Controls/FoodBrowser.xaml
+++ b/WpfApp.PL/Controls/FoodBrowser.xaml
@@ -7,6 +7,7 @@
              xmlns:vms="clr-namespace:WpfApp.PL.ViewModel"
              xmlns:assist="clr-namespace:WpfApp.PL.Assistants"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
              mc:Ignorable="d" 
              DataContext="{Binding Source={StaticResource ViewModelLocator}, Path=FoodBrowser}"
              d:DesignHeight="450" d:DesignWidth="800">
@@ -120,6 +121,14 @@
                             Margin="-2,0,-3,-1">
                     <Image  Source="{Binding Photo}" VerticalAlignment="Center" HorizontalAlignment="Center" />
                 </Border>
+                <lvc:CartesianChart Grid.Row="1" Grid.ColumnSpan="2"  Margin="10, 0, 10, 20" Series="{Binding NutritionsSeriesCollection}">
+                    <lvc:CartesianChart.AxisX>
+                        <lvc:Axis Title="Nutrition" Labels="{Binding Labels}"></lvc:Axis>
+                    </lvc:CartesianChart.AxisX>
+                    <lvc:CartesianChart.AxisY>
+                        <lvc:Axis Title="Value (g)" LabelFormatter="{Binding Formatter}"></lvc:Axis>
+                    </lvc:CartesianChart.AxisY>
+                </lvc:CartesianChart>
             </Grid>
             
         </GroupBox>
