--- a/WpfApp.PL/Controls/FoodBrowser.xaml
+++ b/WpfApp.PL/Controls/FoodBrowser.xaml
@@ -81,16 +81,15 @@
         
             </DataGrid.Columns>
         </DataGrid>
-        <GroupBox Grid.Column="1" Grid.Row="1" Margin="10, 35" Padding="10"
-                    Style="{DynamicResource MaterialDesignCardGroupBox}"
-                DataContext="{Binding FoodNutritions}">
+        <GroupBox Grid.Column="1" Grid.Row="1" Margin="5" Padding="10"
+                    Style="{DynamicResource MaterialDesignCardGroupBox}">
             <GroupBox.Header>
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch">
                     <materialDesign:PackIcon Kind="Food" Foreground="White"
                                                  Height="32" Width="32"
                                                  VerticalAlignment="Center" />
                     <TextBlock Margin="8,0,0,0" Foreground="White"
-                               VerticalAlignment="Center" Text="{Binding FoodName}"
+                               VerticalAlignment="Center" Text="{Binding FoodNutritions.FoodName}"
                                Style="{StaticResource MaterialDesignSubheadingTextBlock}"
                                    />
                 </StackPanel>
@@ -98,7 +97,7 @@
             <Grid >
                 <Grid.RowDefinitions>
                     <RowDefinition />
-                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="2*"/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
@@ -106,11 +105,11 @@
                 </Grid.ColumnDefinitions>
                 <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Vertical">
                     <StackPanel Orientation="Horizontal">
-                        <TextBlock Padding="2,2,2,2" Text="{Binding ServingQuantity}" FontSize="15" />
-                        <TextBlock Padding="0,5,2,2" Text="{Binding ServingUnit}" FontSize="12" FontStyle="Italic"/>
+                        <TextBlock Padding="2,2,2,2" Text="{Binding FoodNutritions.ServingQuantity}" FontSize="15" />
+                        <TextBlock Padding="0,5,2,2" Text="{Binding FoodNutritions.ServingUnit}" FontSize="12" FontStyle="Italic"/>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal">
-                        <TextBlock Padding="2,2,2,2" Text="{Binding ServingWeight}" FontSize="15" />
+                        <TextBlock Padding="2,2,2,2" Text="{Binding FoodNutritions.ServingWeight}" FontSize="15" />
                         <TextBlock Padding="0,5,2,2" Text="g" FontSize="12" FontStyle="Italic"/>
                     </StackPanel>
                 </StackPanel>
@@ -119,15 +118,24 @@
                             CornerRadius="3"
                             HorizontalAlignment="Stretch"
                             Margin="-2,0,-3,-1">
-                    <Image  Source="{Binding Photo}" VerticalAlignment="Center" HorizontalAlignment="Center" />
+                    <Image  Source="{Binding FoodNutritions.Photo}" VerticalAlignment="Center" HorizontalAlignment="Center" />
                 </Border>
-                <lvc:CartesianChart Grid.Row="1" Grid.ColumnSpan="2"  Margin="10, 0, 10, 20" Series="{Binding NutritionsSeriesCollection}">
-                    <lvc:CartesianChart.AxisX>
-                        <lvc:Axis Title="Nutrition" Labels="{Binding Labels}"></lvc:Axis>
-                    </lvc:CartesianChart.AxisX>
+                <lvc:CartesianChart Grid.Row="1" Grid.ColumnSpan="2"  Margin="10, 5, 10, 5">
+                    <lvc:CartesianChart.Series>
+                        <lvc:RowSeries Values="{Binding NutritionsChartValues}" MaxRowHeigth="10" RowPadding="1" DataLabels="True">
+                            
+                        </lvc:RowSeries>
+                    </lvc:CartesianChart.Series>
                     <lvc:CartesianChart.AxisY>
-                        <lvc:Axis Title="Value (g)" LabelFormatter="{Binding Formatter}"></lvc:Axis>
+                        <lvc:Axis Title="Nutrition" Labels="{Binding Labels}">
+                            <lvc:Axis.Separator>
+                                <lvc:Separator Step="1" IsEnabled="False"/>
+                            </lvc:Axis.Separator>
+                        </lvc:Axis>
                     </lvc:CartesianChart.AxisY>
+                    <lvc:CartesianChart.AxisX>
+                        <lvc:Axis Title="Value (g)"></lvc:Axis>
+                    </lvc:CartesianChart.AxisX>
                 </lvc:CartesianChart>
             </Grid>
             
