--- a/WpfApp.PL/MainWindow.xaml
+++ b/WpfApp.PL/MainWindow.xaml
@@ -103,7 +103,7 @@
                         <ListViewItem x:Name="ItemHome" Height="60">
                             <StackPanel Orientation="Horizontal">
                                 <materialDesign:PackIcon Kind="ViewDashboard" Height="25" Width="25" Margin="10"/>
-                                <TextBlock Text="Home" VerticalAlignment="Center" Margin="20 10"/>
+                                <TextBox Text="Home" VerticalAlignment="Center" Margin="20 10"/>
                             </StackPanel>
                         </ListViewItem>
                         <ListViewItem Height="60">
@@ -118,9 +118,14 @@
                             </StackPanel>
                         </ListViewItem>
                         <ListViewItem Height="60">
+                            <i:Interaction.Triggers>
+                                <i:EventTrigger EventName="MouseLeftButtonUp">
+                                    <cmd:EventToCommand Command="{StaticResource NavigationCommand}" CommandParameter="AddMeal"/>
+                                </i:EventTrigger>
+                            </i:Interaction.Triggers>
                             <StackPanel Orientation="Horizontal">
-                                <materialDesign:PackIcon Kind="Ticket" Height="25" Width="25" Margin="10"/>
-                                <TextBlock Text="Tickets" VerticalAlignment="Center"  Margin="20 10"/>
+                                <materialDesign:PackIcon Kind="Plus" Height="25" Width="25" Margin="10"/>
+                                <TextBlock Text="Add Meal" VerticalAlignment="Center"  Margin="20 10"/>
                             </StackPanel>
                         </ListViewItem>
                         <ListViewItem Height="60">
